# intertect

./: .eslintignore  .eslintrc.js  .gitignore  .travis.yml  Gruntfile.js  README.md  app.js  appveyor.yml  index.html  package-lock.json  package.json  server.js  static.json  test.js  webpack.config.dev.js  webpack.config.prod.js
backend/mips-compiler/: .gitignore  Cargo.toml  build.sh  program  test.s
backend/mips-compiler/src/: instruction_printer.rs  lib.rs  mips.pest  reference_extractor.rs  tests.rs
config/: copyright.js  eslint.js
lesson_programs/lesson_1/part_2/: prog.s
lesson_programs/lesson_1/part_4/: prog.s
public/: architecture.html  index.html  intro.html
public/architecture/: index.html
public/css/: intro.css
public/js/: monitor.js
scripts/: compile_lessons.py  compile_test_progs.sh  expand.sed  mipsel-linux-gnu-as  mipsel-linux-gnu-objcopy  monitor_server.js
src/: index.ejs  index.js
src/assembly/: test.s
src/components/: App.js  Debugging.js  Editor.js  FooterPage.js  Implement.js  LandingPage.js  LessonPage.js  MemoryTable.js  PreviousLessons.js  RegistersTable.js  Terminal.js  TerminalAssembly.js  TerminalCat.js  TerminalLs.js  UITour.js  emptyTest.spec.js
src/content/: notes.org  part_1.md  part_2.md
src/lesson_programs/: fib.s
src/starter/: lesson_1-1.js  lesson_1-2.js  lesson_1-3.js  lesson_1-4.js  lesson_1-5.js  lesson_1-6.js
src/store/: configureStore.js
src/styles/: intro.css  landing.css  lesson.css  shared.css
src/utils/: lessonItems.js  mips.d.ts  mips.js  mips_assembly.js  mips_bg.wasm  mips_disassembler.js  mips_printer.js  starter.js  util.js
(+79 files in other folders)
