[package]
name = "mips-compiler"
version = "0.1.0"
authors = ["Peter DeLong <petersdelong@gmail.com>"]

[lib]
name = "mips"
path = "src/lib.rs"

[[bin]]
name = "cli_runner"
path = "src/bin/cli_runner.rs"

[[bin]]
name = "instruction_printer"
path = "src/bin/instruction_printer.rs"

[dependencies]
clap = "2.32"
pest = "^1.0"
pest_derive = "^1.0"
