[package]
name = "mips-compiler"
version = "0.1.0"
authors = [
    "Peter DeLong <petersdelong@gmail.com>",
    "Yash Patel <ypatel5400@gmail.com>"]

[lib]
name = "mips"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "cli_runner"
path = "src/bin/cli_runner.rs"

[[bin]]
name = "instruction_printer"
path = "src/bin/instruction_printer.rs"

[[bin]]
name = "extract_from_reference"
path = "src/bin/extract_from_reference.rs"

[dependencies]
clap = "^2"
pest = "^1.0"
pest_derive = "^1.0"
goblin = "^0.0"
simple-error = "^0.1"
wasm-bindgen = "^0.2"
